--- a/index.textile
+++ b/index.textile
@@ -55,6 +55,14 @@ title: Home
 <div id="archive" class="content_box span-24">
   <div class="content_wrapper">
     <h2>Archive</h2>
+    <h3>2010</h3>
+    <ul>
+      {% for post in site.posts %}
+        {% if post.year == 2010 %}
+          <li><span>{{ post.date | date: "%d.%m." }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endif %}
+      {% endfor %}
+    </ul>
     <h3>2009</h3>
     <ul>
       {% for post in site.posts %}
