--- a/index.textile
+++ b/index.textile
@@ -73,11 +73,12 @@ title: Home
     </ul>
     <h3>2008</h3>
     <ul>
-      {% for post in site.posts %}
+      {% for post in site.posts limit:5 %}
         {% if post.year == 2008 %}
           <li><span>{{ post.date | date: "%d.%m." }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endif %}
       {% endfor %}
+      And <a href="/2008.html">{{ site.posts.size - 5 }} more articles</a>.
     </ul>
   </div>
 </div>
