--- a/_posts/2010-01-10-clean-system.textile
+++ b/_posts/2010-01-10-clean-system.textile
@@ -33,9 +33,9 @@ Finally, since I use the shell a lot, I needed some decent setup there as well. 
 
 h4. Homebrew
 
-Thanks to some recommendations via Twitter, I tried out "Homewbrew":http://github.com/mxcl/homebrew. Apparently, it's *the* new cool thing in terms of package management - at least if you believe "the hype":http://twitter.com/#search?q=%40machomebrew. One of the things that really ate up disk space when I was still using MacPorts was that it always installed a real shitload of unnecessary stuff - mostly optional packages and stuff I already had installed by hand or via a DMG (and MacPorts doesn't care about anything but itself). Homebrew significantly decreases this overhead and it's really clean.
+Thanks to some recommendations via Twitter, I tried out "Homebrew":http://github.com/mxcl/homebrew. Apparently, it's *the* new cool thing in terms of package management - at least if you believe "the hype":http://twitter.com/#search?q=%40machomebrew. One of the things that really ate up disk space when I was still using MacPorts was that it always installed a real shitload of unnecessary stuff - mostly optional packages and stuff I already had installed by hand or via a DMG (and MacPorts doesn't care about anything but itself). Homebrew significantly decreases this overhead and it's really clean.
 
-After first having it installed in <code>/usr/local</code> (just as the README suggests), I decided to move it to my home directory - <code>$HOME/local</code>, to be more exact, because I wanted it to be separated from the rest of my home folder's contents. I decided against <code>/usr/local</code> not because I anticipated that someone else might use my laptop (I'd have to kill them) but rather because some intrusive pieces of software occasionally dump their stuff in <code>/usr/local</code> (e.g. the LaTeX packages for OS X). I just to want to keep an eye on what I installed and be able to easily remove it without thinking about potentially breaking other software. Another plus is that I can leave <code>/usr/local</code> as being owned by root and still can install everything via Homebrew without sudo-ing.
+After first having it installed in <code>/usr/local</code> (just as the README suggests), I decided to move it to my home directory - <code>$HOME/local</code>, to be more exact, because I wanted it to be separated from the rest of my home folder's contents. I decided against <code>/usr/local</code> not because I anticipated that someone else might use my laptop (I'd have to kill them) but rather because some intrusive pieces of software occasionally dump their stuff in <code>/usr/local</code> (e.g. the LaTeX packages for OS X). I just want to keep an eye on what I installed and be able to easily remove it without thinking about potentially breaking other software. Another plus is that I can leave <code>/usr/local</code> as being owned by root and still can install everything via Homebrew without sudo-ing.
 
 Don't forget to add <code>$HOME/local/bin</code> and <code>$HOME/local/sbin</code> to your path.
 
