--- a/_posts/2008-05-19-guide-to-unobtrusive-javascript-part-1.textile
+++ b/_posts/2008-05-19-guide-to-unobtrusive-javascript-part-1.textile
@@ -25,7 +25,7 @@ h3. Meet Event.addBehavior
 
 lowpro's key feature is a method named _addBehavior_ that's added to the _Event_ class. Let's take a look at what an addBehavior call could look like in your _application.js_. We'll add a simple rollover function:
 
-<pre>
+{% highlight javascript %}
 Event.addBehavior({
   // expects image names to be in the following format: some_image.extension
   'img.rollover:mouseover': function(event) {
@@ -45,7 +45,7 @@ Event.addBehavior({
     }
   }
 });
-</pre>
+{% endhighlight %}
 
 What this does is basically split the _src_ attribute of the image tag in multiple parts and checks whether the last part is over. This is a little convention over configuration: When using this, I usually have two icons, e.g. _add_product.png_ and _add_product_over.png_. Two things worth mentioning here before I show you how to use it in your HTML: 
 
@@ -54,13 +54,13 @@ What this does is basically split the _src_ attribute of the image tag in multip
 
 To use the rollover functionality you'll have something like the following in your HTML:
 
-<pre>
+{% highlight html %}
 <img src="/images/icons/ok.png" class="rollover" />
-</pre>
+{% endhighlight %}
 
 Quite simple, huh? No JavaScript cluttering up your HTML - just plain old HTML with a little CSS class definition. I'd have to lie if I told you that this wasn't possible without using lowpro. In fact, just with Prototype itself you can get the same functionality with a little _less_ code:
 
-<pre>
+{% highlight javascript %}
 $$('img.rollover').each(function(element) {
   src = element.src.split(/\./); // split main part and extension
   parts = src.first().split(/_/);
@@ -77,7 +77,7 @@ $$('img.rollover').each(function(element) {
     }
   });
 });
-</pre>
+{% endhighlight %}
 
 So why use lowpro if it makes you use _more_ code instead of less? My reason is simple: In this case (and in many others) I favor clarity over mere brevity. The pure Prototype way - at least in my eyes - focuses on the element whereas the lowpro approach stresses the _behavior_ of the element by adding the element to the selector itself. You'll have to find out for yourself which style you prefer in which case - I promise there'll be more than enough reasons to use lowpro in the next episode of this series.
 
@@ -85,7 +85,7 @@ h3. Unobtrusive _and_ accessible!
 
 Anyway, let's take at a more complex example. We want to build a fancy form that doesn't use labels but instead help the user by writing the field name _inside_ the text fields and text areas. Additionally, we want to make sure that users that have JavaScript disabled can still handle the form (ever heard of "Accessibility":http://en.wikipedia.org/wiki/Web_Content_Accessibility_Guidelines and "Progressive Enhancement":http://en.wikipedia.org/wiki/Progressive_Enhancement? I certainly hope so!). Let's take a look at the JavaScript first:
 
-<pre>
+{% highlight javascript %}
 Event.addBehavior({
   'label.text': function(e) {
     this.hide();
@@ -110,7 +110,7 @@ Event.addBehavior({
     }
   }
 });
-</pre>
+{% endhighlight %}
 
 Wooha - getting a little more complicated here ... 
 
@@ -120,7 +120,7 @@ The last two code blocks handle the selection/deselection of text fields and tex
 
 Let's take a look at the HTML:
 
-<pre>
+{% highlight html %}
 <form action="/products" method="post">
 <p>
   <label class="text" for="product_name">Name</label>
@@ -134,7 +134,7 @@ Let's take a look at the HTML:
   <input id="product_submit" name="commit" type="submit" value="Create!" />
 </p>
 </form>
-</pre>
+{% endhighlight %}
 
 Not much going on here - we define a form with two items (a text field for the product name and a text area for the description) and their respective labels. 
 
