--- a/_posts/2008-06-30-guide-to-unobtrusive-javascript-part-2.textile
+++ b/_posts/2008-06-30-guide-to-unobtrusive-javascript-part-2.textile
@@ -13,16 +13,16 @@ h3. Taking it further - lowpro behaviors
 
 Let's re-visit the rollover example from part 1. We wanted to have a simple rollover effect for all our images with the CSS class _rollover_. Just for fun, I'll start at the end and show you the code that results from using a behavior before we implement the actual behavior:
 
-<pre>
+{% highlight javascript %}
 Event.addBehavior({ 
 // expects image names to be in the following format: some_image.extension 
   'img.rollover': Rollover
 });
-</pre>
+{% endhighlight %}
 
 Wow - we've compressed 20 lines compressed into a single line of code. And it's even more declarative than before! But of course this doesn't come for free - we still need to define the behavior ourselves:
 
-<pre>
+{% highlight javascript %}
 Rollover = Behavior.create({
   initialize: function() {
     this.split_src = this.element.src.split(/\./);
@@ -42,7 +42,7 @@ Rollover = Behavior.create({
     }
   }
 });
-</pre>
+{% endhighlight %}
 
 Most of the code still looks the same as in part 1 but now we've encapsulated the behavior into a separate behavioral class - which is great, from an OO point of view. Every element on the page that suffices the conditions (i.e. it is an image with class _rollover_) will instantiate its own Rollover object that handles its events (_onmouseover_ and _onmouseout_). 
 
@@ -54,7 +54,7 @@ For practice, let's also rewrite the labeled form example from the first article
 
 *NOTE: I had a little error in the code of the first part. I set the value correctly (using .value for textfields and .innerHTML for textareas) but when reading the values I only used the .value version. This has been corrected for this article to use the $F utility method. I've also internalized the hiding of the associated label.*
 
-<pre>
+{% highlight javascript %}
 Form.WithInlineLabels = Behavior.create({
   initialize: function() {
     this.label = this.element.previous('label');
@@ -77,16 +77,16 @@ Form.WithInlineLabels = Behavior.create({
     }
   }
 });
-</pre>
+{% endhighlight %}
 
 Yet again, this makes the call in _Event.addBehavior_ dead easy:
 
-<pre>
+{% highlight javascript %}
 Event.addBehavior({ 
   // makes all textfields and textareas use inline labels
   'input[type=text], textarea': Form.WithInlineLabels
 });
-</pre>
+{% endhighlight %}
 
 h3. Don't rewrite - reuse!
 
@@ -94,12 +94,12 @@ So what's the advantage of using this approach apart from saving a few lines of 
 
 It's like that for lowpro behaviors: You can easily re-use the behavior in other projects. Just put all your behaviors in a separate JavaScript file. After that, you could have a setup like the following:
 
-<pre>
+{% highlight html %}
 <script src="/javascripts/prototype.js" type="text/javascript"></script>
 <script src="/javascripts/lowpro.js" type="text/javascript"></script>
 <script src="/javascripts/behaviors.js" type="text/javascript"></script>
 <script src="/javascripts/application.js" type="text/javascript"></script>
-</pre>
+{% endhighlight %}
 
 _behaviors.js_ keeps a collection of all your behavioral classes (you could even split it into multiple files once you've defined a bunch of behaviors that are related) and _application.js_ connects them to DOM elements using _Event.addBehavior_. Great and clean separation of concerns!
 
@@ -109,7 +109,7 @@ h3. Making it more dynamic - passing in arguments
 
 Let's look at an example where we extend our existing behavior because this also gives us the opportunity of looking at the possibility to pass in arguments to a behavior to make it a little more dynamic. Take a look at the form with inline labels again and assume that you want some forms to not hide the labels but instead show them together with the inline labels.
 
-<pre>
+{% highlight javascript %}
 Form.WithInlineLabels = Behavior.create({
   initialize: function(options) {
     this.options = options || {};
@@ -126,16 +126,16 @@ Form.WithInlineLabels = Behavior.create({
   },
   // ... onfocus and onblur definitions
 });
-</pre>
+{% endhighlight %}
 
 Now the behavior takes an optional hash named _options_ as a parameter. Now we can use both variants, with and without labels (default is, of course, without labels):
 
-<pre>
+{% highlight javascript %}
 Event.addBehavior({
   'form.withLabels input[type=text], form.withLabels textarea': Form.WithInlineLabels({ showLabels: true }),
   'form.withoutLabels input[type=text], form.withoutLabels textarea': Form.WithInlineLabels
 });
-</pre>
+{% endhighlight %}
 
 Why did I use an options hash instead of just using a simple parameter? After all, we're only passing in one argument, right? Well, for now, yes, there's only one option: _showLabels_. But we don't know what we might add in the future: There might be other options as well and there might be bugfixes. If we change methods without being careful, we might break backwards compatibility - and if we do, we might have to hack our bugfixes in if we want/need to use them. Wouldn't it be nice if we could just drop the behavior in an replace the old, buggy one?
 
@@ -151,15 +151,15 @@ I'd give you an example of using _Remote.Link_ but there's already a great examp
 
 Speaking of AJAX: If your application relies heavily on AJAX, you'll find that quite often you add or modify elements of your page. Now imagine, you add content to the DOM that contains one or more images with class _rollover_. Since lowpro adds behaviors when the _dom:ready_ event fires, the behaviors won't get attached to elements that are added afterwards. Of course, Dan realized that and provided you with an option to ensure that behaviors are assigned properly after AJAX requests:
 
-<pre>
+{% highlight javascript %}
 Event.addBehavior.reassignAfterAjax = true;
-</pre>
+{% endhighlight %}
 
 This triggers an additional _onComplete_ handler for AJAX responders that lowpro defined. When triggered, it reloads the behaviors and reassigns them to the matching elements. This way, the behaviors you define are applied to each and every element that shows up on the page - either right from the start or after some AJAX requests.
 
 One more thing while we're talking about pre-defined behaviors. I haven't talked about extending existing behaviors by subclassing them. If you take a look at the lowpro source you'll find the following implementation of the Remote behaviors:
 
-<pre>
+{% highlight javascript %}
 Remote.Base = {
   // code
 }
@@ -171,7 +171,7 @@ Remote.Link = Behavior.create(Remote.Base, {
 Remote.Form = Behavior.create(Remote.Base, {
   // code
 });
-</pre>
+{% endhighlight %}
 
 I've left out the code for the sake of brevity.
 
