--- a/cv.textile
+++ b/cv.textile
@@ -9,21 +9,23 @@ title: About
     <div>
       <img align="right" src="http://gravatar.com/avatar/5976001c9ebf095c4988855a4e102de5?s=300" alt="Clemens Kofler" style="margin-right:10px; margin-bottom:10px;" />
       <h3>General</h3>
-      <ul>
+      <ol>
         <li>Born on 21 May 1986 in Hall in Tirol, Austria</li>
         <li>Currently living in Berlin, Germany</li>
         <li>
           On the web:
-          "GitHub":http://github.com/clemens |
-          "RailsRankings":http://railsrankings.com/coders/clemens-kofler |
-          "WorkingWithRails":http://workingwithrails.com/person/8252-clemens-kofler |
-          "XING":http://xing.com/profile/Clemens_Kofler |
-          "LinkedIn":http://de.linkedin.com/in/clemenskofler
+          <ul class="links">
+            <li>"GitHub":http://github.com/clemens |</li>
+            <li>"RailsRankings":http://railsrankings.com/coders/clemens-kofler |</li>
+            <li>"WorkingWithRails":http://workingwithrails.com/person/8252-clemens-kofler |</li>
+            <li>"XING":http://xing.com/profile/Clemens_Kofler |</li>
+            <li>"LinkedIn":http://de.linkedin.com/in/clemenskofler</li>
+          </ul>
         </li>
-      </ul>
+      </ol>
 
       <h3>Professional experience</h3>
-      <ul>
+      <ol>
         <li>
           <h4>Cileos</h4>
           <p class="description">Co-Founder and Partner</p>
@@ -54,10 +56,10 @@ title: About
           <p class="description">Web developer (short-term employment basis)</p>
           <p class="date">2002 - August 2005</p>
         </li>
-      </ul>
+      </ol>
 
       <h3>Education</h3>
-      <ul>
+      <ol>
         <li>
           <h4>Management Center Innsbruck (University of Applied Science), Austria "http://www.mci.edu":http://www.mci.edu</h4>
           <p class="description">Magister (FH) diploma degree in Management &amp; Applied Informatics</p>
@@ -75,23 +77,23 @@ title: About
           <p class="description">High school graduate</p>
           <p class="date">1996 - 2004</p>
         </li>
-      </ul>
+      </ol>
 
       <h3>Conference talks</h3>
-      <ul>
+      <ol>
         <li>
           <h4>Rails I18n From The Trenches</h4>
-          <p class="description">Presentation about the state of things in Rails i18n and the most important plugins in the Rails i18n ecosystem.</p>
+          <p class="description">Presentation on the state of things in Rails i18n and the most important plugins in the Rails i18n ecosystem.</p>
           <p class="date">Rails Underground, London, July 2009</p>
-          <p>
-            Resources:
-            "Conference website":http://www.rails-underground.com/2009/06/talk-rails-i18n-from-the-trenches-clemens-kofler-.html |
-            "Slides":http://www.slideshare.net/clemensk/rails-i18n-from-the-trenches |
-            "Video":http://skillsmatter.com/podcast/ajax-ria/clemens-kof-rails-i18n-from-the-trenches |
-            "SpeakerRate":http://speakerrate.com/talks/1275-rails-i18n-from-the-trenches
-          </p>
+          Resources:
+          <ul class="links">
+            <li>"Conference website":http://www.rails-underground.com/2009/06/talk-rails-i18n-from-the-trenches-clemens-kofler-.html |</li>
+            <li>"Slides":http://www.slideshare.net/clemensk/rails-i18n-from-the-trenches |</li>
+            <li>"Video":http://skillsmatter.com/podcast/ajax-ria/clemens-kof-rails-i18n-from-the-trenches |</li>
+            <li>"SpeakerRate":http://speakerrate.com/talks/1275-rails-i18n-from-the-trenches</li>
+          </ul>
         </li>
-      </ul>
+      </ol>
     </div>
   </div>
 </div>
